test/sematest/invalid/main_field_access2.java
class A {
    public int field;
    public static void main(String[] args) {
        field = 1;
    }
}
